force-app/main/default/objects/Table_Session__c/Table_Session__c.object-meta.xml
<CustomObject>
    <label>Table Session</label>
    <nameField>
        <label>Table Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Table Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>