force-app/main/default/objects/Table_Session__c/fields/Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Party_Size__c</fullName>
    <description>Number of guests</description>
    <label>Party Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>