force-app/main/default/objects/Table_Session__c/fields/Seated_Time__c.field-meta.xml
<CustomField>
    <fullName>Seated_Time__c</fullName>
    <description>When the party was seated</description>
    <label>Seated Time</label>
    <type>DateTime</type>
</CustomField>