force-app/main/default/objects/Table_Session__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <referenceTo>Table__c</referenceTo>
    <relationshipLabel>Table Sessions</relationshipLabel>
    <relationshipName>Table_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>